--- a/sabyltimetracker/templates/tracker/past_days_edit.html
+++ b/sabyltimetracker/templates/tracker/past_days_edit.html
@@ -95,8 +95,9 @@
           <table id="hours_per_user" class="table table-striped table-bordered">
             <thead>
             <tr>
-              <th>{% trans "Full Name" %}</th>
+              <th>{% trans "Nº" %}</th>
               <th>{% trans "Category" %}</th>
+              <th>{% trans "Full Name" %}</th>
               <th>
                 <span class="hours-label">{% trans "Select a task" %}</span>
                 <input id="select-all" type="checkbox" class="form-control checkbox-lg"/>
@@ -109,6 +110,7 @@
             <tbody>
             {% for worker in workers %}
               <tr>
+                <td>{{ worker.code }}</td>
                 <td>{{ worker.category }}</td>
                 <td>{{ worker.last_name }}, {{ worker.first_name }}</td>
                 <td>
