--- a/sabyltimetracker/templates/tracker/past_days.html
+++ b/sabyltimetracker/templates/tracker/past_days.html
@@ -63,7 +63,7 @@
       <div class="card">
         <div class="card-body card-block">
             <div class="col-sm-6 col-12">
-              <button id="edit" class="btn btn-lg btn-block btn-danger" disabled>{% trans "Edit Day" %}</button>
+              <button id="edit" class="btn btn-lg btn-block btn-danger" disabled type="button">{% trans "Edit Day" %}</button>
             </div>
             <div class="col-sm-6 col-12">
               <button id="report" class="btn btn-lg btn-block btn-primary" disabled type="submit">{% trans "Download Report" %}</button>
