--- a/sabyltimetracker/templates/tracker/dashboard.html
+++ b/sabyltimetracker/templates/tracker/dashboard.html
@@ -53,18 +53,18 @@
             {%  if workers_missing_logs %}
               {% if workers_missing_logs|length == 1 %}
                 <div class="stat-text">
-                  {{ workers_missing_logs|first }} {% trans " needs more logs." %}
+                  {% trans 'The logs for' %} {{ workers_missing_logs|first }} {% trans "require attention." %}
                 </div>
-                <div class="stat-digit">{% trans "1 worker missing logs." %}</div>
+                <div class="stat-digit">{% trans "There is 1 worker left." %}</div>
               {% else %}
                 <div class="stat-text">
-                  {{ workers_missing_logs|ellipsize:3 }} {% trans " need more logs." %}
+                  {% trans 'The logs for' %} {{ workers_missing_logs|ellipsize:3 }} {% trans "require attention." %}
                 </div>
-                <div class="stat-digit">{{ workers_missing_logs|length }} {% trans "workers missing logs." %}</div>
+                <div class="stat-digit">{% trans 'There are' %} {{ workers_missing_logs|length }} {% trans "workers left." %}</div>
               {% endif %}
             {% else %}
               <div class="stat-text">
-                {% trans "All workers have enough logs. When you are sure everything is done, you can end the day." %}
+                {% trans "All workers have logs to match their hours. When you are sure everything is done, you can end the day." %}
               </div>
             {% endif %}
           </div>
