--- a/sabyltimetracker/templates/tracker/day_review.html
+++ b/sabyltimetracker/templates/tracker/day_review.html
@@ -57,18 +57,18 @@
               {%  if workers_missing_logs %}
                 {% if workers_missing_logs|length == 1 %}
                   <div class="stat-text">
-                    {{ workers_missing_logs|first }} {% trans " needs more logs." %}
+                    {% trans 'The logs for' %} {{ workers_missing_logs|first }} {% trans "require attention." %}
                   </div>
-                  <div class="stat-digit">{% trans "1 worker missing logs." %}</div>
+                  <div class="stat-digit">{% trans "There is 1 worker left." %}</div>
                 {% else %}
                   <div class="stat-text">
-                    {{ workers_missing_logs|ellipsize:3 }} {% trans " need more logs." %}
+                    {% trans 'The logs for' %} {{ workers_missing_logs|ellipsize:3 }} {% trans "require attention." %}
                   </div>
-                  <div class="stat-digit">{{ workers_missing_logs|length }} {% trans "workers missing logs." %}</div>
+                  <div class="stat-digit">{% trans 'There are' %} {{ workers_missing_logs|length }} {% trans "workers left." %}</div>
                 {% endif %}
               {% else %}
                 <div class="stat-text">
-                  {% trans "All workers have enough logs. When you are sure everything is done, you can end the day." %}
+                  {% trans "All workers have logs to match their hours. When you are sure everything is done, you can end the day." %}
                 </div>
               {% endif %}
             </div>
@@ -88,6 +88,8 @@
           <table id="logs" class="table table-striped table-bordered">
             <thead>
             <tr>
+              <th>{% trans "Worker Nº" %}</th>
+              <th>{% trans "Worker Category" %}</th>
               <th>{% trans "Full Name" %}</th>
               <th>{% trans "Task" %}</th>
               <th>{% trans "Hours Logged" %}</th>
@@ -96,6 +98,8 @@
             <tbody>
             {% for log in logs %}
               <tr>
+                <td>{{ log.worker.code }}</td>
+                <td>{{ log.worker.category.code }}</td>
                 <td>{{ log.worker.last_name }}, {{ log.worker.first_name }}</td>
                 <td>{{ log.task.name }}</td>
                 <td>{% if log.task.is_boolean %}-{% else %}{{ log.amount }}{% endif %}</td>
@@ -116,9 +120,16 @@
             <a href="{% url 'tracker:log_hours' request.user.username %}" role="button" class="btn btn-lg btn-block btn-outline-primary">{% trans "Back to Edit Hours" %}</a>
           </div>
           <div class="col-sm-6 col-12">
+            <form method="post" action="{% url 'tracker:api_daily_report' request.user.username %}">{% csrf_token %}
+              <button id="report" class="btn btn-lg btn-block btn-outline-primary" type="submit">{% trans "Download Report" %}</button>
+            </form>
+          </div>
+        <br>        <br>
+
+          <div class="col-12">
             <form method="post" action="{% url 'tracker:api_end_day' request.user.username %}">{% csrf_token %}
               <button type="submit"
-                      class="btn btn-lg btn-block btn-outline-success"
+                      class="btn btn-lg btn-block btn-success"
                       {% if workers_missing_logs %} disabled {% endif %}
               >
                 {% trans "Confirm and End Day" %}
