--- a/sabyltimetracker/templates/tracker/day_review.html
+++ b/sabyltimetracker/templates/tracker/day_review.html
@@ -121,13 +121,17 @@
           </div>
           <div class="col-sm-6 col-12">
             <form method="post" action="{% url 'tracker:api_daily_report' request.user.username %}">{% csrf_token %}
+
+                  <input type="text" name="workdaydate" style="display:none;" value="{{ workday }}"/>
+<!--              <input type="text" name="workdaydate" style="display:none;" value="algo"/>-->
+
               <button id="report" class="btn btn-lg btn-block btn-outline-primary" type="submit">{% trans "Download Report" %}</button>
             </form>
           </div>
         <br>        <br>
 
           <div class="col-12">
-            <form method="post" action="{% url 'tracker:api_end_day' request.user.username %}">{% csrf_token %}
+            <form method="post" action="{% url 'tracker:api_end_day' request.user.username%}">{% csrf_token %}
               <button type="submit"
                       class="btn btn-lg btn-block btn-success"
                       {% if workers_missing_logs %} disabled {% endif %}
