--- a/sabyltimetracker/templates/tracker/day_review.html
+++ b/sabyltimetracker/templates/tracker/day_review.html
@@ -139,7 +139,7 @@
             {%  if workers_missing_logs %}
               <p class="col-xs-6">
                 {% trans 'Ammend logs to correctly end the day.' %}
-                <a href="#" class="btn btn-sm btn-link" data-toggle="modal" data-target="#comment-modal">{% trans 'End anyway?' %}</a href="#">
+                <a href="#" class="btn btn-sm btn-link" data-toggle="modal" data-target="#comment-modal">{% trans 'End anyway?' %}</a>
               </p>
               <div class="modal fade" id="comment-modal" tabindex="-1" role="dialog" aria-labelledby="modal-label" aria-hidden="true">
                 <div class="modal-dialog modal-md" role="document">
@@ -189,6 +189,36 @@
   <script src="{% static 'js/data-table/buttons.colVis.min.js' %}"></script>
   <script src="{% static 'js/data-table/datatables-init.js' %}"></script>
   <script>
-    $('#logs').DataTable();
+    $('#logs').DataTable({
+        "pageLength": 10,
+        "language": {
+            "sProcessing": "Procesando...",
+            "sLengthMenu": "Mostrar _MENU_ registros",
+            "sZeroRecords": "No se encontraron resultados",
+            "sEmptyTable": "Ningún dato disponible en esta tabla",
+            "sInfo": "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+            "sInfoEmpty": "Mostrando registros del 0 al 0 de un total de 0 registros",
+            "sInfoFiltered": "(filtrado de un total de _MAX_ registros)",
+            "sInfoPostFix": "",
+            "sSearch": "Buscar:",
+            "sUrl": "",
+            "sInfoThousands": ",",
+            "sLoadingRecords": "Cargando...",
+            "oPaginate": {
+                "sFirst": "Primero",
+                "sLast": "Último",
+                "sNext": "Siguiente",
+                "sPrevious": "Anterior"
+            },
+            "oAria": {
+                "sSortAscending": ": Activar para ordenar la columna de manera ascendente",
+                "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+            },
+            "buttons": {
+                "copy": "Copiar",
+                "colvis": "Visibilidad"
+            }
+        }
+    });
   </script>
 {% endblock javascript %}
