--- a/sabyltimetracker/templates/tracker/log_hours.html
+++ b/sabyltimetracker/templates/tracker/log_hours.html
@@ -169,7 +169,7 @@
 
 
                 <td>
-                  <button data-toggle="modal" data-target="#{{ worker.code }}-comment-modal" type="button" class="btn btn-secondary">
+                  <button data-toggle="modal" data-target="#{{ worker.code }}-comment-modal" type="button" class="btn btn-secondary comentario">
                           Agregar
                   </button>
                 </td>
@@ -204,17 +204,17 @@
 
                 <td data-toggle="modal" data-target="#{{ worker.code }}-detail">
                   <div class="progress">
-                    {% if worker.passes_controls %}
+                    {% if worker.passes_controls_string == "igual" %}
                       <div class="progress-bar bg-success" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="{{ worker.hours_percent }}" aria-valuemin="0" aria-valuemax="100">
-                        <u id="{{ worker.code }}-logged-hours" >{{ worker.total_hours }}</u>
+                        <u id="{{ worker.code }}-logged-hours" ></u>
                       </div>
-                    {% elif worker.hours_percent < 100 %}
+                    {% elif worker.passes_controls_string == "menor" %}
                       <div class="progress-bar bg-warning" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="{{ worker.hours_percent }}" aria-valuemin="0" aria-valuemax="100">
-                        <u id="{{ worker.code }}-logged-hours" >{{ worker.total_hours }}</u>
+                        <u id="{{ worker.code }}-logged-hours" ></u>
                       </div>
                     {% else %}
-                      <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                        <u id="{{ worker.code }}-logged-hours">{{ worker.total_hours }}</u>
+                      <div class="progress-bar bg-danger" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                        <u id="{{ worker.code }}-logged-hours"></u>
                       </div>
                     {% endif %}
                   </div>
