Se cuentan horas extra en DHT general.

--- a/sabyltimetracker/templates/tracker/past_days.html
+++ b/sabyltimetracker/templates/tracker/past_days.html
@@ -16,15 +16,15 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-8">
-      <div class="page-header float-right">
-        <div class="page-title">
-          <ol class="breadcrumb text-right">
-            <li class="active">{% trans 'Past Days' %}</li>
-          </ol>
-        </div>
-      </div>
-    </div>
+<!--    <div class="col-sm-8">-->
+<!--      <div class="page-header float-right">-->
+<!--        <div class="page-title">-->
+<!--          <ol class="breadcrumb text-right">-->
+<!--            <li class="active">{% trans 'Past Days' %}</li>-->
+<!--          </ol>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
   </div>
 {%  endblock breadcrumbs %}
 
