--- a/sabyltimetracker/templates/tracker/dht_report.html
+++ b/sabyltimetracker/templates/tracker/dht_report.html
@@ -14,16 +14,7 @@
     <div class="col-sm-4">
       <div class="page-header float-left">
         <div class="page-title">
-          <h1>{% trans 'Past Days' %}</h1>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-8">
-      <div class="page-header float-right">
-        <div class="page-title">
-          <ol class="breadcrumb text-right">
-            <li class="active">{% trans 'Past Days' %}</li>
-          </ol>
+          <h1>DHT General</h1>
         </div>
       </div>
     </div>
@@ -40,12 +31,15 @@
         </div>
         <div class="card-body">
           <div class="form-group col-md-4">
+            <label>Inicio de primer quincena:</label>
             <input id="initialDay" type="text" name="initialDay" class="form-control" autocomplete="off"/>
           </div>
           <div class="form-group col-md-4">
+            <label>Fin de primer quincena:</label>
             <input id="finishBiweeklyDay" type="text" name="finishBiweeklyDay" class="form-control" autocomplete="off"/>
           </div>
           <div class="form-group col-md-4">
+            <label>Fin de segunda quincena:</label>
             <input id="finishDay" type="text" name="finishDay" class="form-control" autocomplete="off"/>
           </div>
         </div>
@@ -145,11 +139,24 @@
         yearSuffix: ""
     });
 
+    $("#finishDay").datepicker("option", "disabled", true);
+
+    $("#finishBiweeklyDay").change(function(){
+      let valor = $("#finishBiweeklyDay").val();
+      console.log("valor: " + valor)
+      if ((valor != null) && (valor != "")){
+        $("#finishDay").datepicker("option", "disabled", false);
+      } else {
+        $("#finishDay").datepicker("option", "disabled", true);
+      }
+    });
+
 </script>
 
-<!--<script>-->
-<!--    $('#initialDay').val('2020-03-01');-->
-<!--    $('#finishDay').val('2020-04-20');-->
-<!--</script>-->
+<script>
+    $('#initialDay').val('15/04/2020');
+    $('#finishBiweeklyDay').val('30/04/2020');
+    $('#finishDay').val('07/05/2020');
+</script>
 
 {% endblock javascript %}
